------------------------------------------------------------------------
r435 | gaser | 2020-02-24 11:46:09

Changed paths:
M       CHANGES.txt
M       Include/CAT_Surf.h
M       Lib/CAT_Surf.c
M       Progs/CAT_DumpSurfaceRatio.c
!       stamp-h1

(1) Changed: Added option to switch off normalization for surface ratio 
    estimation.
(2) Changed: Added normalization for automatically estimated radius for surface
    ratio.
------------------------------------------------------------------------
r434 | gaser | 2020-02-13 10:54:29 +0100 (Do, 13 Feb 2020) | 10 lines

Changed paths:
M       CHANGES.txt
M       Progs/CAT_3dVol2Surf.c
M       dartel/diffeosphere.c
M       dartel/optimizersphere.c
!       stamp-h1

(1) Changed: Added some OpenMP-code snippets to 2D dartel registration.
(2) Fixed: Direction of equivolume mapping for CAT_3dVol2Surf.c was inverted.

------------------------------------------------------------------------
r433 | gaser | 2020-01-16 22:40:29 +0100 (Do, 16 Jan 2020) | 8 lines

Changed paths:
M       CHANGES.txt
M       Lib/CAT_Defect.c
MM      not_used_anymore/CAT_MarchingCubesSphere.c
 M      not_used_anymore/conjugate.h

Changed: Corrected use of delete_object_list.

------------------------------------------------------------------------
r432 | gaser | 2020-01-16 22:29:02 +0100 (Do, 16 Jan 2020) | 9 lines

Changed paths:
A  +    CHANGES.txt
M       Lib/CAT_Complexity.c
M       Lib/CAT_Defect.c

(1) Fixed: Corrected bug in CAT_Complexity.c where an object was removed
    incorrectly that cause a crash. 
(2) Changed: Added change from last revision in CAT_Defects.c again.

------------------------------------------------------------------------
r431 | gaser | 2020-01-14 08:34:27 +0100 (Di, 14 Jan 2020) | 12 lines

Changed paths:
M       Lib/CAT_Complexity.c
M       Lib/CAT_Curvature.c
M       Lib/CAT_Defect.c
M       Lib/CAT_Gyrification.c
M       Lib/CAT_SPH.c
M       Progs/CAT_DumpGyrificationIndex.c
M       Progs/CAT_FractalDimension.c